--- a/cli/src/app/features/forum/forum.component.html
+++ b/cli/src/app/features/forum/forum.component.html
@@ -224,10 +224,8 @@
         [currentUser]="currentUser!"
         [onlineUsers]="onlineUsers"
         [searchTerm]="searchTerm"
-        [activeFilter]="activeFilter"
         (roomSelected)="onSelectRoom($event)"
         (searchChanged)="searchTerm = $event"
-        (filterChanged)="activeFilter = $event"
         (createGroup)="onCreateGroup()"
         [getUser]="getUser.bind(this)"
         [getRoomMembers]="getRoomMembers.bind(this)"
@@ -332,10 +330,17 @@
         [reactions]="reactions"
         [typingUsers]="typingUsers"
         [isRoomAdmin]="currentUser ? isRoomAdmin(selectedRoom.id, currentUser.id) : false"
+        [allUsers]="users"
+        [paginationCallbacks]="getPaginationCallbacks()"
         (sendMessage)="onSendMessage($event)"
         (reactToMessage)="
           onReactToMessage($event.messageId, $event.reactionType)
         "
+        (updateChatSettings)="onUpdateChatSettings($event)"
+        (handleMemberAction)="onHandleMemberAction($event)"
+        (deleteRoom)="onDeleteRoom($event)"
+        (leaveRoom)="onLeaveRoom($event)"
+        (loadOlderMessages)="onLoadOlderMessages()"
         [getUser]="getUser.bind(this)"
         [getMessageReactions]="getMessageReactions.bind(this)"
       ></app-chat-main>
