edit problem-detail v1 -front -- edit back judge -back

--- a/cli/src/app/features/problems/problem-detail/problem-detail.component.html
+++ b/cli/src/app/features/problems/problem-detail/problem-detail.component.html
@@ -117,6 +117,7 @@
         [problem]="problem"
         [starterCodes]="starterCodes"
         [testCases]="testCases"
+        [examples]="examples"
       >
       </app-code-editor>
     </div>
